Pyspark and sparkr hadoop versions fixed

--- a/alpine/sparkr/Dockerfile
+++ b/alpine/sparkr/Dockerfile
@@ -1,7 +1,7 @@
 ARG SPARK_VERSION=2.3.0
 ARG HADOOP_VERSION=2.7
 
-FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop${HADOOP_VERSION}
+FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
 RUN apk --update add --no-cache R R-dev R-doc
 
