--- a/alpine/pyspark/Dockerfile
+++ b/alpine/pyspark/Dockerfile
@@ -3,7 +3,7 @@ ARG HADOOP_VERSION=2.7
 
 # TODO Update Python version of Pyspark
 
-FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop${HADOOP_VERSION}
+FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
 RUN apk --update add --no-cache python3 python3-dev python3-doc
 
