Pyspark and sparkr hadoop versions fixed

--- a/ubuntu/pyspark/Dockerfile
+++ b/ubuntu/pyspark/Dockerfile
@@ -3,7 +3,7 @@ ARG HADOOP_VERSION=2.7
 
 # TODO Update Python version of Pyspark
 
-FROM mpolatcan/spark:ubuntu-${SPARK_VERSION}-hadoop${HADOOP_VERSION}
+FROM mpolatcan/spark:ubuntu-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
 RUN apt-get update && \
     apt-get -y install --no-install-recommends python3.5 python3.5-dev python3.5-dev && \
