--- a/ubuntu/sparkr/Dockerfile
+++ b/ubuntu/sparkr/Dockerfile
@@ -1,7 +1,7 @@
 ARG SPARK_VERSION=2.3.0
 ARG HADOOP_VERSION=2.7
 
-FROM mpolatcan/spark:ubuntu-${SPARK_VERSION}-hadoop${HADOOP_VERSION}
+FROM mpolatcan/spark:ubuntu-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
 RUN echo "deb http://cran.rstudio.com/bin/linux/ubuntu xenial/" | tee -a /etc/apt/sources.list && \
     gpg --keyserver keyserver.ubuntu.com --recv-key E084DAB9 && \
