spark versions updated

--- a/alpine/spark/Dockerfile
+++ b/alpine/spark/Dockerfile
@@ -286,6 +286,7 @@ RUN apk --update add --no-cache nano bash python procps rsync coreutils wget && 
     rm spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
     mv /usr/local/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}/* ${SPARK_HOME} && \
     rm -r /usr/local/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} && \
-    chmod +x entrypoint.sh spark_config_loader.sh
+    chmod +x entrypoint.sh spark_config_loader.sh && \
+    echo "PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin:$JAVA_HOME/bin" >> /etc/profile
 
 ENTRYPOINT ["./entrypoint.sh"]
