--- a/alpine/pyspark/Dockerfile
+++ b/alpine/pyspark/Dockerfile
@@ -1,10 +1,9 @@
 ARG SPARK_VERSION=2.3.0
 ARG HADOOP_VERSION=2.7
-
-# TODO Update Python version of Pyspark
+ENV PYSPARK_PYTHON="python3"
 
 FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
-RUN apk --update add --no-cache python3 python3-dev python3-doc
+RUN apk --update add --no-cache python3.6 python3.6-dev python3.6-doc
 
 ENTRYPOINT ["./entrypoint.sh"]
