--- a/ubuntu/pyspark/Dockerfile
+++ b/ubuntu/pyspark/Dockerfile
@@ -1,12 +1,11 @@
 ARG SPARK_VERSION=2.3.0
 ARG HADOOP_VERSION=2.7
-
-# TODO Update Python version of Pyspark
+ENV PYSPARK_PYTHON="python3"
 
 FROM mpolatcan/spark:ubuntu-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
 RUN apt-get update && \
-    apt-get -y install --no-install-recommends python3.5 python3.5-dev python3.5-dev && \
+    apt-get -y install --no-install-recommends python3-pip python3.6 python3.6-dev python3.6-dev && \
     rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["./entrypoint.sh"]
