sparkr images fixed. spark versions updated

--- a/alpine/pyspark/Dockerfile
+++ b/alpine/pyspark/Dockerfile
@@ -4,6 +4,6 @@ ENV PYSPARK_PYTHON="python3"
 
 FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
-RUN apk --update add --no-cache python3.6 python3.6-dev python3.6-doc
+RUN apk --update add --no-cache python3.6 python3.6-dev python3.6-doc python3-pip
 
 ENTRYPOINT ["./entrypoint.sh"]
