--- a/alpine/pyspark/Dockerfile
+++ b/alpine/pyspark/Dockerfile
@@ -5,6 +5,7 @@ FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
 ENV PYSPARK_PYTHON="python3"
 
-RUN apk --update add --no-cache python3 python3-dev
+RUN apk --update add --no-cache python3 python3-dev &&
+    pip3 install setuptools
 
 ENTRYPOINT ["./entrypoint.sh"]
