--- a/alpine/pyspark/Dockerfile
+++ b/alpine/pyspark/Dockerfile
@@ -6,6 +6,6 @@ FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 ENV PYSPARK_PYTHON="python3"
 
 RUN apk --update add --no-cache python3 python3-dev &&
-    pip3 install setuptools
+    pip3 install setuptools wheel
 
 ENTRYPOINT ["./entrypoint.sh"]
