--- a/ubuntu/pyspark/Dockerfile
+++ b/ubuntu/pyspark/Dockerfile
@@ -6,8 +6,8 @@ FROM mpolatcan/spark:ubuntu-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 ENV PYSPARK_PYTHON="python3"
 
 RUN apt-get update && \
-    apt-get -y install --no-install-recommends python3 python3-dev python3-pip && \
-    pip3 install setuptools wheel && \
+    apt-get -y install --no-install-recommends python3 python3-dev python3-pip libpq-dev && \
+    pip3 install setuptools wheel pyspark jupyter psycopg2 sqlalchemy && \
     rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["./entrypoint.sh"]
