--- a/ubuntu/pyspark/Dockerfile
+++ b/ubuntu/pyspark/Dockerfile
@@ -7,7 +7,8 @@ ENV PYSPARK_PYTHON="python3"
 
 RUN apt-get update && \
     apt-get -y install --no-install-recommends python3 python3-dev python3-pip libpq-dev && \
-    pip3 install setuptools wheel pyspark jupyter psycopg2 sqlalchemy && \
+    pip3 install setuptools wheel && \
+    pip3 install pyspark jupyter psycopg2 sqlalchemy && \
     rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["./entrypoint.sh"]
