pyspark images fixes

--- a/alpine/pyspark/Dockerfile
+++ b/alpine/pyspark/Dockerfile
@@ -5,7 +5,7 @@ FROM mpolatcan/spark:alpine-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
 
 ENV PYSPARK_PYTHON="python3"
 
-RUN apk --update add --no-cache python3 python3-dev libpq-dev && \
+RUN apk --update add --no-cache python3 python3-dev postgresql-dev && \
     pip3 install setuptools wheel && \
     pip3 install pyspark jupyter pyscopg2 sqlalchemy
 
