pyspark images fixes

--- a/alpine/pyspark/Dockerfile
+++ b/alpine/pyspark/Dockerfile
@@ -7,6 +7,6 @@ ENV PYSPARK_PYTHON="python3"
 
 RUN apk --update add --no-cache python3 python3-dev postgresql-dev && \
     pip3 install setuptools wheel && \
-    pip3 install pyspark jupyter pyscopg2 sqlalchemy
+    pip3 install pyspark jupyter psycopg2 sqlalchemy
 
 ENTRYPOINT ["./entrypoint.sh"]
