alpine versions removed due to lack of glibc

--- a/src/pyspark/Dockerfile
+++ b/src/pyspark/Dockerfile
@@ -1,7 +1,8 @@
 ARG SPARK_VERSION=2.3.0
 ARG HADOOP_VERSION=2.7
+ARG JAVA_VERSION=8
 
-FROM mpolatcan/spark:ubuntu-${SPARK_VERSION}-hadoop-${HADOOP_VERSION}
+FROM mpolatcan/spark:${SPARK_VERSION}-hadoop-${HADOOP_VERSION}-java${JAVA_VERSION}
 
 ENV PYSPARK_PYTHON="python3"
 
