spark-env.sh env vars added to Dockerfile

--- a/src/spark/Dockerfile
+++ b/src/spark/Dockerfile
@@ -1,3 +1,4 @@
+# TODO Cluster mode YARN will be added
 ARG JAVA_VERSION=8
 
 FROM openjdk:${JAVA_VERSION}
@@ -7,13 +8,29 @@ MAINTAINER Mutlu Polacan <mutlupolatcan@gmail.com>
 ARG SPARK_VERSION=2.3.0
 ARG HADOOP_VERSION=2.7
 
+ENV SPARK_NODE_TYPE "master"
 ENV SPARK_HOME "/usr/local/spark"
-ENV SPARK_CONF_DIR "${SPARK_HOME}/conf"
 ENV PATH $PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin
 
-ENV SPARK_NODE_TYPE "master"
+# ------------------------ GENERAL PROPERTIES ------------------------
+ENV SPARK_CONF_DIR "${SPARK_HOME}/conf"
+ENV HADOOP_CONF_DIR ""
+ENV YARN_CONF_DIR ""
 ENV SPARK_MASTER_HOSTNAME "NULL"
 ENV SPARK_MASTER_PORT "7077"
+ENV SPARK_MASTER_OPTS ""
+ENV SPARK_WORKER_CORES "2"
+ENV SPARK_WORKER_MEMORY "1g"
+ENV SPARK_WORKER_PORT ""
+ENV SPARK_WORKER_DIR ""
+ENV SPARK_WORKER_OPTS ""
+ENV SPARK_DAEMON_MEMORY ""
+ENV SPARK_HISTORY_OPTS ""
+ENV SPARK_SHUFFLE_OPTS ""
+ENV SPARK_DAEMON_JAVA_OPTS ""
+ENV SPARK_DAEMON_CLASSPATH ""
+ENV SPARK_MASTER_WEBUI_PORT "8080"
+ENV SPARK_LAUNCHER_OPTS ""
 
 # ------------------------ APPLICATION PROPERTIES --------------------
 ENV SPARK_DRIVER_CORES "1"
@@ -23,7 +40,6 @@ ENV SPARK_EXECUTOR_MEMORY "1g"
 ENV SPARK_EXTRA_LISTENERS "NULL"
 ENV SPARK_LOCAL_DIR "/tmp"
 ENV SPARK_LOG_CONF "false"
-ENV SPARK_MASTER "NULL"
 ENV SPARK_SUBMIT_DEPLOY_MODE "NULL"
 ENV SPARK_LOG_CALLER_CONTEXT "NULL"
 ENV SPARK_DRIVER_SUPERVISE "false"
@@ -279,7 +295,6 @@ ENV SPARK_DEPLOY_ZOOKEEPER_DIR "NULL"
 # --------------------------------------------------------------------
 
 COPY entrypoint.sh spark_config_loader.sh ./
-COPY spark-env.sh ${SPARK_CONF_DIR}/
 
 RUN apt-get update && \
     apt-get -y install --no-install-recommends nano scala rsync wget g++ && \
