configurations updated, standalon deploy mode removed

--- a/src/spark/Dockerfile
+++ b/src/spark/Dockerfile
@@ -9,34 +9,19 @@ ARG SPARK_VERSION=2.3.0
 ARG HADOOP_VERSION=2.7
 
 ENV SPARK_NODE_TYPE "master"
-ENV SPARK_HOME "/usr/local/spark"
+ENV SPARK_HOME "${HDUSER_HOME}/spark"
+ENV SPARK_CONF_DIR "${SPARK_HOME}/conf"
 ENV PATH $PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin
 
-# ------------------------ GENERAL PROPERTIES ------------------------
-ENV SPARK_CONF_DIR "${SPARK_HOME}/conf"
-ENV HADOOP_CONF_DIR ""
-ENV YARN_CONF_DIR ""
-ENV SPARK_MASTER_HOSTNAME "NULL"
-ENV SPARK_MASTER_PORT "7077"
-ENV SPARK_MASTER_OPTS ""
-ENV SPARK_WORKER_CORES "2"
-ENV SPARK_WORKER_MEMORY "1g"
-ENV SPARK_WORKER_PORT ""
-ENV SPARK_WORKER_DIR ""
-ENV SPARK_WORKER_OPTS ""
-ENV SPARK_DAEMON_MEMORY ""
-ENV SPARK_HISTORY_OPTS ""
-ENV SPARK_SHUFFLE_OPTS ""
-ENV SPARK_DAEMON_JAVA_OPTS ""
-ENV SPARK_DAEMON_CLASSPATH ""
-ENV SPARK_MASTER_WEBUI_PORT "8080"
-ENV SPARK_LAUNCHER_OPTS ""
-
 # ------------------------ APPLICATION PROPERTIES --------------------
+ENV SPARK_MASTER "yarn"
 ENV SPARK_DRIVER_CORES "1"
 ENV SPARK_DRIVER_MAX_RESULT_SIZE "1g"
 ENV SPARK_DRIVER_MEMORY "1g"
+ENV SPARK_DRIVER_MEMORY_OVERHEAD "NULL"
 ENV SPARK_EXECUTOR_MEMORY "1g"
+ENV SPARK_EXECUTOR_PYSPARK_MEMORY "NULL"
+ENV SPARK_EXECUTOR_MEMORY_OVERHEAD ""
 ENV SPARK_EXTRA_LISTENERS "NULL"
 ENV SPARK_LOCAL_DIR "/tmp"
 ENV SPARK_LOG_CONF "false"
@@ -59,6 +44,7 @@ ENV SPARK_EXECUTOR_LOGS_ROLLING_MAX_SIZE "NULL"
 ENV SPARK_EXECUTOR_LOGS_ROLLING_STRATEGY "NULL"
 ENV SPARK_EXECUTOR_LOGS_ROLLING_TIME_INTERVAL "daily"
 ENV SPARK_EXECUTOR_USER_CLASSPATH_FIRST "false"
+ENV SPARK_REDACTION_REGEX "NULL"
 ENV SPARK_PYTHON_PROFILE "false"
 ENV SPARK_PYTHON_PROFILE_DUMP "NULL"
 ENV SPARK_PYTHON_WORKER_MEMORY "512m"
@@ -101,13 +87,17 @@ ENV SPARK_IO_ENCRYPTION_KEYGEN_ALGORITHM "HmacSHA1"
 
 # ----------------------- SPARK UI PROPERTIES ------------------------
 ENV SPARK_EVENTLOG_LOG_BLOCK_UPDATES_ENABLED "false"
+ENV SPARK_EVENTLOG_LONGFORM_ENABLED "false"
 ENV SPARK_EVENTLOG_COMPRESS "false"
 ENV SPARK_EVENTLOG_DIR "file:///tmp/spark-events"
 ENV SPARK_EVENTLOG_ENABLED "false"
 ENV SPARK_EVENTLOG_OVERWRITE "false"
 ENV SPARK_EVENTLOG_BUFFER_KB "100k"
+ENV SPARK_UI_DAG_GRAPH_RETAINED_ROOT_RDDS "NULL"
 ENV SPARK_UI_ENABLED "true"
 ENV SPARK_UI_KILL_ENABLED "true"
+ENV SPARK_UI_LIVE_UPDATE_PERIOD "NULL"
+ENV SPARK_UI_LIVE_UPDATE_MIN_FLUSH_PERIOD "NULL"
 ENV SPARK_UI_PORT "4040"
 ENV SPARK_UI_RETAINED_JOBS "1000"
 ENV SPARK_UI_RETAINED_STAGES "1000"
@@ -120,10 +110,12 @@ ENV SPARK_WORKER_UI_RETAINED_DRIVERS "1000"
 ENV SPARK_SQL_UI_RETAINED_EXECUTIONS "1000"
 ENV SPARK_STREAMING_UI_RETAINED_BATCHES "1000"
 ENV SPARK_UI_RETAINED_DEAD_EXECUTORS "100"
+ENV SPARK_UI_FILTERS "NULL"
 # --------------------------------------------------------------------
 
 # ------------- COMPRESSION AND SERIALIZATION PROPERTIES -------------
 ENV SPARK_BROADCAST_COMPRESS "true"
+ENV SPARK_CHECKPOINT_COMPRESS "NULL"
 ENV SPARK_IO_COMPRESSION_CODEC "lz4"
 ENV SPARK_IO_COMPRESSION_LZ4_BLOCKSIZE "32k"
 ENV SPARK_IO_COMPRESSION_SNAPPY_BLOCKSIZE "32k"
@@ -160,6 +152,7 @@ ENV SPARK_CLEANER_REFERENCE_TRACKING_CLEAN_CHECKPOINTS "false"
 
 # ------------------- EXECUTION BEHAVIOR PROPERTIES ------------------
 ENV SPARK_BROADCAST_BLOCKSIZE "4m"
+ENV SPARK_BROADCAST_CHECKSUM "NULL"
 ENV SPARK_EXECUTOR_CORES "1"
 ENV SPARK_DEFAULT_PARALLELISM "NULL"
 ENV SPARK_EXECUTOR_HEARTBEAT_INTERVAL "10s"
@@ -176,9 +169,12 @@ ENV SPARK_HADOOP_MAPREDUCE_FILEOUTPUTCOMMITTER_ALGORITHM_VERSION "1"
 
 # ---------------------- NETWORKING PROPERTIES -----------------------
 ENV SPARK_RPC_MESSAGE_MAX_SIZE "128"
+ENV SPARK_BLOCKMANAGER_PORT "NULL"
+ENV SPARK_DRIVER_BLOCKMANAGER_PORT "NULL"
 ENV SPARK_DRIVER_BIND_ADDRESS "NULL"
 ENV SPARK_DRIVER_HOST "NULL"
 ENV SPARK_DRIVER_PORT "NULL"
+ENV SPARK_RPC_IO_BACKLOG "NULL"
 ENV SPARK_NETWORK_TIMEOUT "120s"
 ENV SPARK_PORT_MAX_RETRIES "16"
 ENV SPARK_RPC_NUM_RETRIES "3"
@@ -190,11 +186,15 @@ ENV SPARK_RPC_LOOKUP_TIMEOUT "120s"
 # ------------------------ SCHEDULING PROPERTIES ---------------------
 ENV SPARK_CORES_MAX "NULL"
 ENV SPARK_LOCALITY_WAIT "3s"
+ENV SPARK_LOCALITY_WAIT_NODE "NULL"
+ENV SPARK_LOCALITY_WAIT_PROCESS "NULL"
+ENV SPARK_LOCALITY_WAIT_RACK "NULL"
 ENV SPARK_SCHEDULER_MAX_REGISTERED_RESOURCES_WAITING_TIME "30s"
 ENV SPARK_SCHEDULER_MIN_REGISTERED_RESOURCES_RATION "0.0"
 ENV SPARK_SCHEDULER_MODE "FIFO"
 ENV SPARK_SCHEDULER_REVIVE_INTERVAL "1s"
 ENV SPARK_SCHEDULER_LISTENERBUS_EVENTQUEUE_CAPACITY "10000"
+ENV SPARK_SCHEDULER_BLACKLIST_UNSCHEDULABLE_TASK_SET_TIMEOUT "NULL"
 ENV SPARK_BLACKLIST_ENABLED "false"
 ENV SPARK_BLACKLIST_TIMEOUT "1h"
 ENV SPARK_BLACKLIST_TASK_MAX_TASK_ATTEMPTS_PER_EXECUTOR "1"
@@ -222,8 +222,10 @@ ENV SPARK_STAGE_MAX_CONSECUTIVE_ATTEMPTS "4"
 ENV SPARK_DYNAMIC_ALLOCATION_ENABLED "false"
 ENV SPARK_DYNAMIC_ALLOCATION_EXECUTOR_IDLE_TIMEOUT "60s"
 ENV SPARK_DYNAMIC_ALLOCATION_CACHED_EXECUTOR_IDLE_TIMEOUT "infinity"
+ENV SPARK_DYNAMIC_ALLOCATION_INITIAL_EXECUTORS "NULL"
 ENV SPARK_DYNAMIC_ALLOCATION_MAX_EXECUTORS "infinity"
 ENV SPARK_DYNAMIC_ALLOCATION_MIN_EXECUTORS "0"
+ENV SPARK_DYNAMIC_ALLOCATION_EXECUTOR_ALLOCATION_RATIO "NULL"
 ENV SPARK_DYNAMIC_ALLOCATION_SCHEDULER_BACKLOG_TIMEOUT "1s"
 # --------------------------------------------------------------------
 
@@ -272,6 +274,7 @@ ENV SPARK_STREAMING_UNPERSIST "true"
 ENV SPARK_STREAMING_STOP_GRACEFULLY_ON_SHUTDOWN "false"
 ENV SPARK_STREAMING_KAFKA_MAX_RATE_PER_PARTITION "NULL"
 ENV SPARK_STREAMING_KAFKA_MAX_RETRIES "1"
+ENV SPARK_STREAMING_UI_RETAINED_BATCHES "NULL"
 ENV SPARK_STREAMING_DRIVER_WAL_LOG_CLOSE_FILE_AFTER_WRITE "false"
 ENV SPARK_STREAMING_RECEIVER_WAL_LOG_CLOSE_FILE_AFTER_WRITE "false"
 # --------------------------------------------------------------------
@@ -294,18 +297,56 @@ ENV SPARK_DEPLOY_ZOOKEEPER_URL "NULL"
 ENV SPARK_DEPLOY_ZOOKEEPER_DIR "NULL"
 # --------------------------------------------------------------------
 
-COPY entrypoint.sh spark_config_loader.sh ./
+# --------------------------- YARN PROPERTIES ------------------------
+ENV SPARK_YARN_AM_MEMORY "NULL"
+ENV SPARK_YARN_AM_CORES "NULL"
+ENV SPARK_YARN_AM_WAIT_TIME "NULL"
+ENV SPARK_YARN_SUBMIT_FILE_REPLICATION "NULL"
+ENV SPARK_YARN_STAGING_DIR "NULL"
+ENV SPARK_YARN_PRESERVE_STAGING_FILES "NULL"
+ENV SPARK_YARN_SCHEDULER_HEARTBEAT_INTERVAL_MS "NULL"
+ENV SPARK_YARN_SCHEDULER_INITIAL_ALLOCATION_INTERVAL "NULL"
+ENV SPARK_YARN_MAX_EXECUTOR_FAILURES "NULL"
+ENV SPARK_YARN_HISTORY_SERVER_ADDRESS "NULL"
+ENV SPARK_YARN_DIST_ARCHIVES "NULL"
+ENV SPARK_YARN_DIST_FILES "NULL"
+ENV SPARK_YARN_DIST_JARS "NULL"
+ENV SPARK_YARN_DIST_FORCE_DOWNLOAD_SCHEMAS "NULL"
+ENV SPARK_EXECUTOR_INSTANCES "NULL"
+ENV SPARK_YARN_AM_OVERHEAD "NULL"
+ENV SPARK_YARN_QUEUE "NULL"
+ENV SPARK_YARN_JARS "NULL"
+ENV SPARK_YARN_ARCHIVE "NULL"
+ENV SPARK_YARN_CONTAINER_LAUNCHER_MAX_THREADS "NULL"
+ENV SPARK_YARN_AM_EXTRA_JAVA_OPTIONS "NULL"
+ENV SPARK_YARN_AM_EXTRA_LIBRARY_PATH "NULL"
+ENV SPARK_YARN_MAX_APP_ATTEMPTS "NULL"
+ENV SPARK_YARN_AM_ATTEMPT_FAILURES_VALIDITY_INTERVAL "NULL"
+ENV SPARK_YARN_EXECUTOR_FAILRUES_VALIDITY_INTERVAL "NULL"
+ENV SPARK_YARN_SUBMIT_WAIT_APP_COMPLETION "NULL"
+ENV SPARK_YARN_AM_NODE_LABEL_EXPRESSION "NULL"
+ENV SPARK_YARN_EXECUTOR_NODE_LABEL_EXPRESSION "NULL"
+ENV SPARK_YARN_TAGS "NULL"
+ENV SPARK_YARN_CONFIG_GATEWAY_PATH "NULL"
+ENV SPARK_YARN_CONFIG_REPLACEMENT_PATH "NULL"
+ENV SPARK_YARN_ROLLED_LOG_INCLUDE_PATTERN "NULL"
+ENV SPARK_YARN_ROLLED_LOG_EXCLUDE_PATTERN "NULL"
+ENV SPARK_YARN_BLACKLIST_EXECUTOR_LAUNCH_BLACKLISTING_ENABLED "NULL"
+ENV SPARK_YARN_METRICS_NAMESPACE "NULL"
+# --------------------------------------------------------------------
 
-RUN apt-get update && \
-    apt-get -y install --no-install-recommends nano scala rsync wget g++ && \
-    rm -rf /var/lib/apt/lists/* && \
-    wget http://www-eu.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
+ADD entrypoint.sh ${HDUSER_HOME}/spark_entrypoint.sh
+ADD spark_config_loader.sh ${HDUSER_HOME}/
+
+USER root
+RUN wget http://www-eu.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
     mkdir -p ${SPARK_HOME} && \
-    tar -xvzf spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz -C /usr/local && \
+    tar -xvzf spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz -C ${HDUSER_HOME} && \
     rm spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
-    mv /usr/local/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}/* ${SPARK_HOME} && \
-    rm -r /usr/local/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} && \
-    chmod +x entrypoint.sh spark_config_loader.sh && \
+    mv ${HDUSER_HOME}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}/* ${SPARK_HOME} && \
+    rm -r ${HDUSER_HOME}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION} && \
+    chmod +x ${HDUSER_HOME}/spark_entrypoint.sh ${HDUSER_HOME}/spark_config_loader.sh && \
     echo "PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin" >> /etc/environment
 
-ENTRYPOINT ["./entrypoint.sh"]
+USER hduser
+ENTRYPOINT ["./spark_entrypoint.sh", "spark"]
