dockerfile bug fixes

--- a/src/spark/Dockerfile
+++ b/src/spark/Dockerfile
@@ -20,7 +20,7 @@ ENV SPARK_DRIVER_MEMORY "1g"
 ENV SPARK_DRIVER_MEMORY_OVERHEAD "NULL"
 ENV SPARK_EXECUTOR_MEMORY "1g"
 ENV SPARK_EXECUTOR_PYSPARK_MEMORY "NULL"
-ENV SPARK_EXECUTOR_MEMORY_OVERHEAD ""
+ENV SPARK_EXECUTOR_MEMORY_OVERHEAD "NULL"
 ENV SPARK_EXTRA_LISTENERS "NULL"
 ENV SPARK_LOCAL_DIR "/tmp"
 ENV SPARK_LOG_CONF "false"
