spark images refactored and all configurations added

--- a/src/pyspark/Dockerfile
+++ b/src/pyspark/Dockerfile
@@ -1,8 +1,10 @@
 ARG SPARK_VERSION=2.4.4
-ARG HADOOP_VERSION=3.1.2
+ARG HADOOP_VERSION=3.2.1
 ARG JAVA_VERSION=8
 
 FROM mpolatcan/spark:${SPARK_VERSION}-hadoop-${HADOOP_VERSION}-java${JAVA_VERSION}
+
+MAINTAINER Mutlu Polacan <mutlupolatcan@gmail.com>
 
 ENV PYSPARK_PYTHON="python3"
 
