--- a/src/spark/Dockerfile
+++ b/src/spark/Dockerfile
@@ -1,351 +1,20 @@
 ARG JAVA_VERSION=8
 ARG HADOOP_VERSION=3.2.1
 
-FROM mpolatcan/hadoop:${HADOOP_VERSION}-java${JAVA_VERSION}
+FROM mpolatcan/spark:base-hadoop-${HADOOP_VERSION}-java${JAVA_VERSION}
 
 MAINTAINER Mutlu Polacan <mutlupolatcan@gmail.com>
 
 ARG SPARK_VERSION=2.3.0
 ARG SPARK_HADOOP_VERSION=2.7
 
-ENV SPARK_HOME "${HDUSER_HOME}/spark"
-ENV SPARK_CONF_DIR "${SPARK_HOME}/conf"
-ENV PATH $PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin
-
-# ------------------------ APPLICATION PROPERTIES --------------------
-ENV SPARK_MASTER "yarn"
-ENV SPARK_DRIVER_CORES "1"
-ENV SPARK_DRIVER_MAX_RESULT_SIZE "1g"
-ENV SPARK_DRIVER_MEMORY "1g"
-ENV SPARK_DRIVER_MEMORY_OVERHEAD "NULL"
-ENV SPARK_EXECUTOR_MEMORY "1g"
-ENV SPARK_EXECUTOR_PYSPARK_MEMORY "NULL"
-ENV SPARK_EXECUTOR_MEMORY_OVERHEAD "NULL"
-ENV SPARK_EXTRA_LISTENERS "NULL"
-ENV SPARK_LOCAL_DIR "/tmp"
-ENV SPARK_LOG_CONF "false"
-ENV SPARK_SUBMIT_DEPLOY_MODE "NULL"
-ENV SPARK_LOG_CALLER_CONTEXT "NULL"
-ENV SPARK_DRIVER_SUPERVISE "false"
-# --------------------------------------------------------------------
-
-# ------------------- RUNTIME ENVIRONMENT PROPERTIES -----------------
-ENV SPARK_DRIVER_EXTRA_CLASSPATH "NULL"
-ENV SPARK_DRIVER_EXTRA_JAVA_OPTIONS "NULL"
-ENV SPARK_DRIVER_EXTRA_LIBRARY_PATH "NULL"
-ENV SPARK_DRIVER_USER_CLASSPATH_FIRST "false"
-ENV SPARK_EXECUTOR_EXTRA_CLASSPATH "NULL"
-ENV SPARK_EXECUTOR_EXTRA_JAVA_OPTIONS "NULL"
-ENV SPARK_EXECUTOR_EXTRA_LIBRARY_PATH "NULL"
-ENV SPARK_EXECUTOR_LOGS_ROLLING_MAX_RETAINED_FILES "NULL"
-ENV SPARK_EXECUTOR_LOGS_ROLLING_ENABLE_COMPRESSION "false"
-ENV SPARK_EXECUTOR_LOGS_ROLLING_MAX_SIZE "NULL"
-ENV SPARK_EXECUTOR_LOGS_ROLLING_STRATEGY "NULL"
-ENV SPARK_EXECUTOR_LOGS_ROLLING_TIME_INTERVAL "daily"
-ENV SPARK_EXECUTOR_USER_CLASSPATH_FIRST "false"
-ENV SPARK_REDACTION_REGEX "NULL"
-ENV SPARK_PYTHON_PROFILE "false"
-ENV SPARK_PYTHON_PROFILE_DUMP "NULL"
-ENV SPARK_PYTHON_WORKER_MEMORY "512m"
-ENV SPARK_PYTHON_WORKER_REUSE "true"
-ENV SPARK_FILES "NULL"
-ENV SPARK_SUBMIT_PYFILES "NULL"
-ENV SPARK_JARS "NULL"
-ENV SPARK_JARS_PACKAGES "NULL"
-ENV SPARK_JARS_EXCLUDES "NULL"
-ENV SPARK_JARS_IVY "NULL"
-ENV SPARK_JARS_IVY_SETTINGS "NULL"
-ENV SPARK_JARS_REPOSITORIES "NULL"
-ENV SPARK_PYSPARK_DRIVER_PYTHON "NULL"
-ENV SPARK_PYSPARK_PYTHON "NULL"
-# --------------------------------------------------------------------
-
-# -------------------- SHUFFLE BEHAVIOR PROPERTIES -------------------
-ENV SPARK_REDUCER_MAX_SIZE_IN_FLIGHT "48m"
-ENV SPARK_REDUCER_MAX_REQS_IN_FLIGHT "NULL"
-ENV SPARK_REDUCER_MAX_BLOCKS_IN_FLIGHT_PER_ADDRESS "NULL"
-ENV SPARK_MAX_REMOTE_BLOCK_SIZE_FETCH_TO_MEM "NULL"
-ENV SPARK_SHUFFLE_COMPRESS "true"
-ENV SPARK_SHUFFLE_FILE_BUFFER "32k"
-ENV SPARK_SHUFFLE_IO_MAX_RETRIES "3"
-ENV SPARK_SHUFFLE_IO_NUM_CONNECTIONS_PER_PEER "1"
-ENV SPARK_SHUFFLE_IO_PREFER_DIRECT_BUFS "true"
-ENV SPARK_SHUFFLE_IO_RETRY_WAIT "5s"
-ENV SPARK_SHUFFLE_SERVICE_EANBLED "false"
-ENV SPARK_SHUFFLE_SERVICE_PORT "7337"
-ENV SPARK_SHUFFLE_SERVICE_INDEX_CACHE_SIZE "100m"
-ENV SPARK_SHUFFLE_MAX_CHUNKS_BEING_TRANSFERRED "NULL"
-ENV SPARK_SHUFFLE_SORT_BYPASS_MERGE_THRESHOLD "200"
-ENV SPARK_SHUFFLE_SPILL_COMPRESS "true"
-ENV SPARK_SHUFFLE_REGISTRATION_TIMEOUT "5000"
-ENV SPARK_SHUFFLE_REGISTRATION_MAX_ATTEMPTS "3"
-ENV SPARK_IO_ENCRYPTION_ENABLED "false"
-ENV SPARK_IO_ENCRYPTION_KEY_SIZE_BITS "128"
-ENV SPARK_IO_ENCRYPTION_KEYGEN_ALGORITHM "HmacSHA1"
-# --------------------------------------------------------------------
-
-# ----------------------- SPARK UI PROPERTIES ------------------------
-ENV SPARK_EVENTLOG_LOG_BLOCK_UPDATES_ENABLED "false"
-ENV SPARK_EVENTLOG_LONGFORM_ENABLED "false"
-ENV SPARK_EVENTLOG_COMPRESS "false"
-ENV SPARK_EVENTLOG_DIR "file:///tmp/spark-events"
-ENV SPARK_EVENTLOG_ENABLED "false"
-ENV SPARK_EVENTLOG_OVERWRITE "false"
-ENV SPARK_EVENTLOG_BUFFER_KB "100k"
-ENV SPARK_UI_DAG_GRAPH_RETAINED_ROOT_RDDS "NULL"
-ENV SPARK_UI_ENABLED "true"
-ENV SPARK_UI_KILL_ENABLED "true"
-ENV SPARK_UI_LIVE_UPDATE_PERIOD "NULL"
-ENV SPARK_UI_LIVE_UPDATE_MIN_FLUSH_PERIOD "NULL"
-ENV SPARK_UI_PORT "4040"
-ENV SPARK_UI_RETAINED_JOBS "1000"
-ENV SPARK_UI_RETAINED_STAGES "1000"
-ENV SPARK_UI_RETAINED_TASKS "100000"
-ENV SPARK_UI_REVERSE_PROXY "true"
-ENV SPARK_UI_REVERSE_PROXY_URL "NULL"
-ENV SPARK_UI_SHOW_CONSOLE_PROGRESS "true"
-ENV SPARK_WORKER_UI_RETAINED_EXECUTORS "1000"
-ENV SPARK_WORKER_UI_RETAINED_DRIVERS "1000"
-ENV SPARK_SQL_UI_RETAINED_EXECUTIONS "1000"
-ENV SPARK_STREAMING_UI_RETAINED_BATCHES "1000"
-ENV SPARK_UI_RETAINED_DEAD_EXECUTORS "100"
-ENV SPARK_UI_FILTERS "NULL"
-# --------------------------------------------------------------------
-
-# ------------- COMPRESSION AND SERIALIZATION PROPERTIES -------------
-ENV SPARK_BROADCAST_COMPRESS "true"
-ENV SPARK_CHECKPOINT_COMPRESS "NULL"
-ENV SPARK_IO_COMPRESSION_CODEC "lz4"
-ENV SPARK_IO_COMPRESSION_LZ4_BLOCKSIZE "32k"
-ENV SPARK_IO_COMPRESSION_SNAPPY_BLOCKSIZE "32k"
-ENV SPARK_IO_COMPRESSION_ZSTD_LEVEL "1"
-ENV SPARK_IO_COMPRESSION_ZSTD_BUFFER_SIZE "32k"
-ENV SPARK_KRYO_CLASSES_TO_REGISTER "NULL"
-ENV SPARK_KRYO_REFERENCE_TRACKING "true"
-ENV SPARK_KRYO_REGISTRATION_REQUIRED "false"
-ENV SPARK_KRYO_REGISTRATOR "NULL"
-ENV SPARK_KRYO_UNSAFE "false"
-ENV SPARK_KRYO_SERIALIZER_BUFFER_MAX "64m"
-ENV SPARK_KRYO_SERIALIZER_BUFFER "64k"
-ENV SPARK_RDD_COMPRESS "false"
-ENV SPARK_SERIALIZER "org.apache.spark.serializer.JavaSerializer"
-ENV SPARK_SERIALIZER_OBJECT_STREAM_RESET "100"
-# --------------------------------------------------------------------
-
-# ------------------- MEMORY MANAGEMENT PROPERTIES -------------------
-ENV SPARK_MEMORY_FRACTION "0.6"
-ENV SPARK_MEMORY_STORAGE_FRACTION "0.5"
-ENV SPARK_MEMORY_OFFHEAP_ENABLED "false"
-ENV SPARK_MEMORY_OFFHEAP_SIZE "0"
-ENV SPARK_MEMORY_USE_LEGACY_MODE "false"
-ENV SPARK_SHUFFLE_MEMORY_FRACTION "0.2"
-ENV SPARK_STORAGE_MEMORY_FRACTION "0.6"
-ENV SPARK_STORAGE_UNROLL_FRACTION "0.2"
-ENV SPARK_STORAGE_REPLICATION_PROACTIVE "false"
-ENV SPARK_CLEANER_PERIODIC_GC_INTERVAL "30min"
-ENV SPARK_CLEANER_REFERENCE_TRACKING "true"
-ENV SPARK_CLEANER_REFERENCE_TRACKING_BLOCKING "true"
-ENV SPARK_CLEANER_REFERENCE_TRACKING_BLOCKING_SHUFFLE "false"
-ENV SPARK_CLEANER_REFERENCE_TRACKING_CLEAN_CHECKPOINTS "false"
-# --------------------------------------------------------------------
-
-# ------------------- EXECUTION BEHAVIOR PROPERTIES ------------------
-ENV SPARK_BROADCAST_BLOCKSIZE "4m"
-ENV SPARK_BROADCAST_CHECKSUM "NULL"
-ENV SPARK_EXECUTOR_CORES "1"
-ENV SPARK_DEFAULT_PARALLELISM "NULL"
-ENV SPARK_EXECUTOR_HEARTBEAT_INTERVAL "10s"
-ENV SPARK_FILES_FETCH_TIMEOUT "60s"
-ENV SPARK_FILES_USE_FETCH_CACHE "true"
-ENV SPARK_FILES_OVERWRITE "false"
-ENV SPARK_FILES_MAX_PARTITION_BYTES "134217728"
-ENV SPARK_FILES_OPEN_COST_IN_BYTES "4194304"
-ENV SPARK_HADOOP_CLONE_CONF "false"
-ENV SPARK_HADOOP_VALIDATE_OUTPUT_SPECS "true"
-ENV SPARK_STORAGE_MEMORY_MAP_THRESHOLD "2m"
-ENV SPARK_HADOOP_MAPREDUCE_FILEOUTPUTCOMMITTER_ALGORITHM_VERSION "1"
-# --------------------------------------------------------------------
-
-# ---------------------- NETWORKING PROPERTIES -----------------------
-ENV SPARK_RPC_MESSAGE_MAX_SIZE "128"
-ENV SPARK_BLOCKMANAGER_PORT "NULL"
-ENV SPARK_DRIVER_BLOCKMANAGER_PORT "NULL"
-ENV SPARK_DRIVER_BIND_ADDRESS "NULL"
-ENV SPARK_DRIVER_HOST "NULL"
-ENV SPARK_DRIVER_PORT "NULL"
-ENV SPARK_RPC_IO_BACKLOG "NULL"
-ENV SPARK_NETWORK_TIMEOUT "120s"
-ENV SPARK_PORT_MAX_RETRIES "16"
-ENV SPARK_RPC_NUM_RETRIES "3"
-ENV SPARK_RPC_RETRY_WAIT "3s"
-ENV SPARK_RPC_ASK_TIMEOUT "120s"
-ENV SPARK_RPC_LOOKUP_TIMEOUT "120s"
-# --------------------------------------------------------------------
-
-# ------------------------ SCHEDULING PROPERTIES ---------------------
-ENV SPARK_CORES_MAX "NULL"
-ENV SPARK_LOCALITY_WAIT "3s"
-ENV SPARK_LOCALITY_WAIT_NODE "NULL"
-ENV SPARK_LOCALITY_WAIT_PROCESS "NULL"
-ENV SPARK_LOCALITY_WAIT_RACK "NULL"
-ENV SPARK_SCHEDULER_MAX_REGISTERED_RESOURCES_WAITING_TIME "30s"
-ENV SPARK_SCHEDULER_MIN_REGISTERED_RESOURCES_RATION "0.0"
-ENV SPARK_SCHEDULER_MODE "FIFO"
-ENV SPARK_SCHEDULER_REVIVE_INTERVAL "1s"
-ENV SPARK_SCHEDULER_LISTENERBUS_EVENTQUEUE_CAPACITY "10000"
-ENV SPARK_SCHEDULER_BLACKLIST_UNSCHEDULABLE_TASK_SET_TIMEOUT "NULL"
-ENV SPARK_BLACKLIST_ENABLED "false"
-ENV SPARK_BLACKLIST_TIMEOUT "1h"
-ENV SPARK_BLACKLIST_TASK_MAX_TASK_ATTEMPTS_PER_EXECUTOR "1"
-ENV SPARK_BLACKLIST_TASK_MAX_TASK_ATTEMPTS_PER_NODE "2"
-ENV SPARK_BLACKLIST_STAGE_MAX_FAILED_TASKS_PER_EXECUTOR "2"
-ENV SPARK_BLACKLIST_STAGE_MAX_FAILED_EXECUTORS_PER_NODE "2"
-ENV SPARK_BLACKLIST_APPLICATION_MAX_FAILED_TASKS_PER_EXECUTOR "2"
-ENV SPARK_BLACKLIST_APPLICATION_MAX_FAILED_EXECUTORS_PER_NODE "2"
-ENV SPARK_BLACKLIST_KILL_BLACKLISTED_EXECUTORS "false"
-ENV SPARK_BLACKLIST_APPLICATION_FETCH_FAILURE_ENABLED "false"
-ENV SPARK_SPECULATION "false"
-ENV SPARK_SPECULATION_INTERVAL "100ms"
-ENV SPARK_SPECULATION_MULTIPLIER "1.5"
-ENV SPARK_SPECULATION_QUANTILE "0.75"
-ENV SPARK_TASK_CPUS "1"
-ENV SPARK_TASK_MAX_FAILURES "4"
-ENV SPARK_TASK_REAPER_ENABLED "false"
-ENV SPARK_TASK_REAPER_POLLING_INTERVAL "10s"
-ENV SPARK_TASK_REAPER_THREAD_DUMP "true"
-ENV SPARK_TASK_REAPER_KILL_TIMEOUT "-1"
-ENV SPARK_STAGE_MAX_CONSECUTIVE_ATTEMPTS "4"
-# --------------------------------------------------------------------
-
-# --------------------- DYNAMIC ALLOCATION PROPERTIES ----------------
-ENV SPARK_DYNAMIC_ALLOCATION_ENABLED "false"
-ENV SPARK_DYNAMIC_ALLOCATION_EXECUTOR_IDLE_TIMEOUT "60s"
-ENV SPARK_DYNAMIC_ALLOCATION_CACHED_EXECUTOR_IDLE_TIMEOUT "infinity"
-ENV SPARK_DYNAMIC_ALLOCATION_INITIAL_EXECUTORS "NULL"
-ENV SPARK_DYNAMIC_ALLOCATION_MAX_EXECUTORS "infinity"
-ENV SPARK_DYNAMIC_ALLOCATION_MIN_EXECUTORS "0"
-ENV SPARK_DYNAMIC_ALLOCATION_EXECUTOR_ALLOCATION_RATIO "NULL"
-ENV SPARK_DYNAMIC_ALLOCATION_SCHEDULER_BACKLOG_TIMEOUT "1s"
-# --------------------------------------------------------------------
-
-# ------------------------- SECURITY PROPERTIES ----------------------
-ENV SPARK_ACLS_ENABLE "false"
-ENV SPARK_ADMIN_ACLS "NULL"
-ENV SPARK_ADMIN_ACLS_GROUPS "NULL"
-ENV SPARK_USER_GROUPS_MAPPING "org.apache.spark.security.ShellBasedGroupsMappingProvider"
-ENV SPARK_AUTHENTICATE "false"
-ENV SPARK_AUTHENTICATE_SECRET "NULL"
-ENV SPARK_NETWORK_CRYPTO_ENABLED "false"
-ENV SPARK_NETWORK_CRYPTO_KEY_LENGTH "128"
-ENV SPARK_NETWORK_CRYPTO_KEY_FACTORY_ALGORITHM "PBKDF2WithHmacSHA1"
-ENV SPARK_NETWORK_CRYPTO_SASL_FALLBACK "true"
-ENV SPARK_AUTHENTICATE_ENABLE_SASL_ENCRYPTION "false"
-ENV SPARK_NETWORK_SASL_SERVER_ALWAYS_ENCRYPT "false"
-ENV SPARK_CORE_CONNECTION_ACK_WAIT_TIMEOUT "NULL"
-ENV SPARK_MODIFY_ACLS "NULL"
-ENV SPARK_MODIFY_ACLS_GROUPS "NULL"
-ENV SPARK_UI_FILTERS "NULL"
-ENV SPARK_UI_VIEW_ACLS "NULL"
-ENV SPARK_UI_VIEW_ACLS_GROUPS "NULL"
-# --------------------------------------------------------------------
-
-# -------------------------- TLS / SSL PROPERTIES --------------------
-ENV SPARK_SSL_ENABLED "false"
-ENV SPARK_SSL_ENABLED_ALGORITHMS "NULL"
-ENV SPARK_SSL_KEY_PASSWORD "NULL"
-ENV SPARK_SSL_KEYSTORE "NULL"
-ENV SPARK_SSL_KEYSTORE_PASSWORD "NULL"
-ENV SPARK_SSL_KEYSTORE_TYPE "JKS"
-ENV SPARK_SSL_PROTOCOL "NULL"
-ENV SPARK_SSL_NEED_CLIENT_AUTH "false"
-ENV SPARK_SSL_TRUSTSTORE "NULL"
-ENV SPARK_SSL_TRUSTSTORE_PASSWORD "NULL"
-ENV SPARK_SSL_TRUSTSTORE_TYPE "JKS"
-# --------------------------------------------------------------------
-
-# ---------------------- SPARK STREAMING PROPERTIES ------------------
-ENV SPARK_STREAMING_BACKPRESSURE_ENABLED "false"
-ENV SPARK_STREAMING_BACKPRESSURE_INITIAL_RATE "NULL"
-ENV SPARK_STREAMING_BLOCK_INTERVAL "200ms"
-ENV SPARK_STREAMING_RECEIVER_MAX_RATE "NULL"
-ENV SPARK_STREAMING_RECEIVER_WAL_LOG_ENABLE "false"
-ENV SPARK_STREAMING_UNPERSIST "true"
-ENV SPARK_STREAMING_STOP_GRACEFULLY_ON_SHUTDOWN "false"
-ENV SPARK_STREAMING_KAFKA_MAX_RATE_PER_PARTITION "NULL"
-ENV SPARK_STREAMING_KAFKA_MAX_RETRIES "1"
-ENV SPARK_STREAMING_UI_RETAINED_BATCHES "NULL"
-ENV SPARK_STREAMING_DRIVER_WAL_LOG_CLOSE_FILE_AFTER_WRITE "false"
-ENV SPARK_STREAMING_RECEIVER_WAL_LOG_CLOSE_FILE_AFTER_WRITE "false"
-# --------------------------------------------------------------------
-
-# ----------------------- SPARKR PROPERTIES --------------------------
-ENV SPARK_R_NUM_R_BACKEND_THREADS "2"
-ENV SPARK_R_COMMAND "Rscript"
-ENV SPARK_R_SHELL_COMMAND "R"
-ENV SPARK_R_BACKEND_CONNECTION_TIMEOUT "6000"
-ENV SPARK_R_HEARTBEAT_INTERVAL "100"
-# --------------------------------------------------------------------
-
-# --------------------------- GRAPHX PROPERTIES ----------------------
-ENV SPARK_GRAPHX_PREGEL_CHECKPOINT_INTERVAL "-1"
-# --------------------------------------------------------------------
-
-# --------------------------- DEPLOY PROPERTIES ----------------------
-ENV SPARK_DEPLOY_RECOVERY_MODE "NULL"
-ENV SPARK_DEPLOY_ZOOKEEPER_URL "NULL"
-ENV SPARK_DEPLOY_ZOOKEEPER_DIR "NULL"
-# --------------------------------------------------------------------
-
-# --------------------------- YARN PROPERTIES ------------------------
-ENV SPARK_YARN_AM_MEMORY "NULL"
-ENV SPARK_YARN_AM_CORES "NULL"
-ENV SPARK_YARN_AM_WAIT_TIME "NULL"
-ENV SPARK_YARN_SUBMIT_FILE_REPLICATION "NULL"
-ENV SPARK_YARN_STAGING_DIR "NULL"
-ENV SPARK_YARN_PRESERVE_STAGING_FILES "NULL"
-ENV SPARK_YARN_SCHEDULER_HEARTBEAT_INTERVAL_MS "NULL"
-ENV SPARK_YARN_SCHEDULER_INITIAL_ALLOCATION_INTERVAL "NULL"
-ENV SPARK_YARN_MAX_EXECUTOR_FAILURES "NULL"
-ENV SPARK_YARN_HISTORY_SERVER_ADDRESS "NULL"
-ENV SPARK_YARN_DIST_ARCHIVES "NULL"
-ENV SPARK_YARN_DIST_FILES "NULL"
-ENV SPARK_YARN_DIST_JARS "NULL"
-ENV SPARK_YARN_DIST_FORCE_DOWNLOAD_SCHEMAS "NULL"
-ENV SPARK_EXECUTOR_INSTANCES "NULL"
-ENV SPARK_YARN_AM_OVERHEAD "NULL"
-ENV SPARK_YARN_QUEUE "NULL"
-ENV SPARK_YARN_JARS "NULL"
-ENV SPARK_YARN_ARCHIVE "NULL"
-ENV SPARK_YARN_CONTAINER_LAUNCHER_MAX_THREADS "NULL"
-ENV SPARK_YARN_AM_EXTRA_JAVA_OPTIONS "NULL"
-ENV SPARK_YARN_AM_EXTRA_LIBRARY_PATH "NULL"
-ENV SPARK_YARN_MAX_APP_ATTEMPTS "NULL"
-ENV SPARK_YARN_AM_ATTEMPT_FAILURES_VALIDITY_INTERVAL "NULL"
-ENV SPARK_YARN_EXECUTOR_FAILRUES_VALIDITY_INTERVAL "NULL"
-ENV SPARK_YARN_SUBMIT_WAIT_APP_COMPLETION "NULL"
-ENV SPARK_YARN_AM_NODE_LABEL_EXPRESSION "NULL"
-ENV SPARK_YARN_EXECUTOR_NODE_LABEL_EXPRESSION "NULL"
-ENV SPARK_YARN_TAGS "NULL"
-ENV SPARK_YARN_CONFIG_GATEWAY_PATH "NULL"
-ENV SPARK_YARN_CONFIG_REPLACEMENT_PATH "NULL"
-ENV SPARK_YARN_ROLLED_LOG_INCLUDE_PATTERN "NULL"
-ENV SPARK_YARN_ROLLED_LOG_EXCLUDE_PATTERN "NULL"
-ENV SPARK_YARN_BLACKLIST_EXECUTOR_LAUNCH_BLACKLISTING_ENABLED "NULL"
-ENV SPARK_YARN_METRICS_NAMESPACE "NULL"
-# --------------------------------------------------------------------
-
-ADD entrypoint.sh ${HDUSER_HOME}/spark_entrypoint.sh
-ADD spark_config_loader.sh ${HDUSER_HOME}/
-
 USER root
 RUN wget http://www-eu.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${SPARK_HADOOP_VERSION}.tgz && \
-    mkdir -p ${SPARK_HOME} && \
     tar -xvzf spark-${SPARK_VERSION}-bin-hadoop${SPARK_HADOOP_VERSION}.tgz -C ${HDUSER_HOME} && \
     rm spark-${SPARK_VERSION}-bin-hadoop${SPARK_HADOOP_VERSION}.tgz && \
     mv ${HDUSER_HOME}/spark-${SPARK_VERSION}-bin-hadoop${SPARK_HADOOP_VERSION}/* ${SPARK_HOME} && \
     rm -r ${HDUSER_HOME}/spark-${SPARK_VERSION}-bin-hadoop${SPARK_HADOOP_VERSION} && \
-    chmod +x ${HDUSER_HOME}/spark_entrypoint.sh ${HDUSER_HOME}/spark_config_loader.sh && \
-    echo "PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin" >> /etc/environment
+    chown -R hduser:hadoop ${SPARK_HOME}
 
 USER hduser
 ENTRYPOINT ["./spark_entrypoint.sh", "spark"]
