dockerfile args updated

--- a/src/pyspark/Dockerfile
+++ b/src/pyspark/Dockerfile
@@ -1,6 +1,6 @@
-ARG SPARK_VERSION=2.4.4
-ARG HADOOP_VERSION=3.2.1
-ARG JAVA_VERSION=8
+ARG SPARK_VERSION=""
+ARG HADOOP_VERSION=""
+ARG JAVA_VERSION=""
 
 FROM mpolatcan/spark:${SPARK_VERSION}-hadoop-${HADOOP_VERSION}-java${JAVA_VERSION}
 
