--- a/src/spark/Dockerfile
+++ b/src/spark/Dockerfile
@@ -1,12 +1,12 @@
-ARG JAVA_VERSION=8
-ARG HADOOP_VERSION=3.2.1
+ARG JAVA_VERSION=""
+ARG HADOOP_VERSION=""
 
 FROM mpolatcan/spark:base-hadoop-${HADOOP_VERSION}-java${JAVA_VERSION}
 
 MAINTAINER Mutlu Polacan <mutlupolatcan@gmail.com>
 
-ARG SPARK_VERSION=2.3.0
-ARG SPARK_HADOOP_VERSION=2.7
+ARG SPARK_VERSION=""
+ARG SPARK_HADOOP_VERSION=""
 
 USER root
 RUN wget http://www-eu.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${SPARK_HADOOP_VERSION}.tgz && \
